--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
                     <h1 class="menu__titulo"></h1>
                 </li>
                 <li class="menu__item"><a href="#" class="">Programação</a></li>
-                <li class="menu__item"> <a href="#">Categorias</a></li>
+                <li class="menu__item"><a href="#">Categorias</a></li>
                 <li class="menu__item"><a href="#">Seu local</a></li>
-
                 <li class="menu__item menu__pesquisar">
-                    <label class="menu__label" for="pesquisar"><input class="menu__input" type="search" name="" placeholder="O que você procura?"
+                    <label class="menu__label" for="pesquisar"><input class=" " type="search" name="" placeholder="O que você procura?"
                         id="pesquisar"></label>
                 </li>
             </ul>
