--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
                     <h1 class="menu__titulo"></h1>
                 </li>
                 <li class="menu__item"><a href="#" class="">Programação</a></li>
-                <li class="menu__item"><a href="#">Categorias</a></li>
+                <li class="menu__item"> <a href="#">Categorias</a></li>
                 <li class="menu__item"><a href="#">Seu local</a></li>
+
                 <li class="menu__item menu__pesquisar">
-                    <label class="menu__label" for="pesquisar"><input class=" " type="search" name="" placeholder="O que você procura?"
+                    <label class="menu__label" for="pesquisar"><input class="menu__input" type="search" name="" placeholder="O que você procura?"
                         id="pesquisar"></label>
                 </li>
             </ul>
@@ -58,7 +59,8 @@
             <div class="categorias__destaques">
                 <div class="destaques">
                     <h3 class="destaques__titulo">Destaques:</h3>
-                    <div class="destaques__barra">
+                    <div class="destaques__barra"></div>
+                    <div>
                         <img src="./assets/img/icone-seta-voltar.png">
                         <img src="./assets/img/icone-seta-avancar.png">
                     </div>
